--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Account Settings</title>
+    <meta name="description" content="Manage your account settings, security, notifications, privacy, and billing in one beautiful interface." />
+    <meta name="theme-color" content="#0f172a" />
+    <title>Account Settings Dashboard</title>
   </head>
   <body>
     <div id="root"></div>
